@@ -1258,6 +1258,8 @@ PANOPTICON_SYSCONFIG_LBL_FIELD_DASHBOARD_MAX_ITEMS="Maximum Displayed Items"
 PANOPTICON_SYSCONFIG_LBL_FIELD_DASHBOARD_MAX_ITEMS_HELP="Panopticon always loads up to 50 sites per HTTP request. This is the maximum number of sites to be displayed <em>in total</em>."
 
 PANOPTICON_SYSCONFIG_LBL_FIELD_PHPWARNINGS="PHP Version Messages in Main Page"
+PANOPTICON_SYSCONFIG_LBL_FIELD_AVATARS="Show avatars for users"
+PANOPTICON_SYSCONFIG_LBL_FIELD_AVATARS_HELP="Display avatars for users. This feature is powered by the third party service <a href='https://gravatar.com' _target='_blank'>Gravatar</a>."
 PANOPTICON_SYSCONFIG_LBL_FIELD_WEBCRON_KEY="Web CRON Key"
 PANOPTICON_SYSCONFIG_LBL_FIELD_CRON_STUCK_THRESHOLD="Stuck Task Threshold"
 PANOPTICON_SYSCONFIG_LBL_FIELD_MAX_EXECUTION="Maximum Execution Time"
