@@ -9,6 +9,7 @@ Akeeba Panopticon 1.2.0
 + Control email sending for scheduled backups [gh-712]
 + Auto-ban IPs after many failed login attempts
 ~ System Configuration uses more Show On tricks to show/hide relevant settings
+~ Expose the Avatars setting in System Configuration [gh-729]
 # [LOW] Wrong message about not having Akeeba Backup installed shown when adding a new site [gh-661]
 # [LOW] Wrong language in mail Blade templates [gh-658]
 # [LOW] Groups for disabled sites may not be displayed in the Sites admin page
